<resources>
    <string name="app_name">TimeApp</string>
    <string name="splash_screen">Splash screen animation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Time</string>
    <string name="login">Войти</string>
    <string name="email">Email адрес</string>
    <string name="password">Пароль</string>
    <string name="name">Имя</string>
    <string name="rememberPassword">Забыли пароль?</string>
    <string name="noAccount">Еще нет аккаунта? Создать</string>
    <string name="signFacebook">Войти через Facebook</string>
    <string name="or">НА ГЛАВНУЮ</string>
    <string name="logotype">logo</string>
    <string name="goHome">НА ГЛАВНУЮ</string>
    <string name="registration">Регистрация</string>
    <string name="passwordConfirm">Повторите пароль</string>
    <string name="yesAccount">Есть аккаунт? Войти</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Неправильный формат номера</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logo">logo</string>
    <string name="todo">TODO</string>
    <string name="settings_act">Настройки</string>
    <string name="title_activity_settings">Settings</string>
    <string name="actual">актуальные</string>
    <string name="free">свободные</string>
    <string name="all">все услуги</string>
    <string name="main_info">главная</string>
    <string name="privacy_policy">Нажимая ДАЛЕЕ , Вы соглашаетесь с правилами сервиса.</string>
    <string name="attention_text">Номер нужен для проверки, что вы не робот. Его не увидят специалисты без вашего разрешения.</string>
    <string name="feedback">отзывы</string>
    <string name="actual_fragment">Hello Actual fragment</string>
    <string name="free_fragment">Hello Free fragment</string>
    <string name="all_fragment">Hello All fragment</string>
    <string name="salon">TODO</string>
    <string name="history_service">История услуг</string>
    <string name="support_service">Служба поддержки</string>
    <string name="settings">Настройки</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_default">DefaultActivity</string>
    <string name="bowling">Боулинг</string>
    <string name="billiard">Биллиард</string>
    <string name="makeUp">Визижисты</string>
    <string name="carWash">Автомойки</string>
    <string name="barberShop">Барбер</string>
    <string name="medicine">Медицина</string>
    <string name="carService">Автосервис</string>
    <string name="photoStudio">Фото студия</string>
    <string name="salons">Салоны красоты</string>
    <string name="law">Нотариусы</string>
    <string name="repairShoes">Ремонт обуви</string>
    <string name="hostel">Хостелы</string>
    <string name="beaty">Красота</string>
    <string name="haircut">Стрижка</string>
    <string name="kosmetolog">Косметолги</string>
    <string name="manicure">Маникюр</string>
    <string name="makeup">Визажисты</string>
    <string name="barbershop">Барбершопы</string>
    <string name="pedicure">Педикюр</string>
    <string name="ukladka">Укладка</string>
    <string name="drawhair">Окрашивания</string>
    <string name="spa">СПА</string>
    <string name="massage">Массаж</string>
    <string name="eye">Ресницы и Укладка</string>
    <string name="carRepair">Авторемонты</string>
    <string name="carWheel">Шинамонтаж</string>
    <string name="carSpray">Кузовной ремонт</string>
    <string name="carPart">Ходовая часть</string>
    <string name="carMetre">Ремонт автоэлектрики</string>
    <string name="carTech">Тех. осмотр</string>
    <string name="carComputer">Комп. диагностика</string>
    <string name="carAC">Ремонт климат контроля</string>
    <string name="medTooth">Стоматологии</string>
    <string name="medFlu">Флюорграфии</string>
    <string name="medGene">Гинекологи</string>
    <string name="medUrol">Урологи</string>
    <string name="medEye">Офтальмологи</string>
    <string name="medBaby">Педиатры</string>
    <string name="medHead">Отоларингологи</string>
    <string name="med">Медицина</string>
    <string name="entertainment">Развлечения</string>
    <string name="enterSaunas">Бани и Сауны</string>
    <string name="enterGames">Видеоигры</string>
    <string name="enterKvests">Квесты</string>
    <string name="services">Услуги</string>
    <string name="serTelephone">Ремонт тел.</string>
    <string name="serComputer">Ремонт комп.</string>
    <string name="serShoes">Ремонт обуви</string>
    <string name="serNot">Нотариусы</string>
    <string name="serCamera">Фото салоны</string>
    <string name="serTur">Ателье</string>
    <string name="tourism">Туризм</string>
    <string name="tourHotels">Отели</string>
    <string name="tourBeds">Хостелы</string>
    <string name="google_map_api">AIzaSyBF_36xxYR3MWbiZf7xTVpzZXeZNd40JTY</string>
    <string name="location_icon">Кнопка карты</string>
    <string name="title_activity_single">SingleActivity</string>
    <string name="transition_arrow">transition_arrow</string>
    <string name="transition_ivFlag">transition_ivFlag</string>
    <string name="transition_tvCode">transition_tvCode</string>
    <string name="transition_tvPhoneNo">transition_tvPhoneNo</string>
    <string name="transition_llPhone">transition_llPhone</string>
</resources>