<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history_service" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="Наши новости" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_customer_service"
            android:title="@string/support_service" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_help"
            android:title="@string/settings" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

    <item android:title="Authorization">
        <menu>
            <item
                android:id="@+id/logout_menu"
                android:icon="@drawable/ic_logout"
                android:title="Выйти" />
        </menu>
    </item>



</menu>
